// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hash256.from Reports error on invalid hash256 1`] = `
"snippetCode.ts (3,20): Argument to Hash256.from must be a string literal hash256.

      1 | 
      2 |       import { Hash256 } from '@neo-one/smart-contract';
    > 3 |       const keys = Hash256.from('abc');
        |                    ^
      4 |     
"
`;

exports[`Hash256.from cannot be element referenced 1`] = `
"snippetCode.ts (3,20): Builtin properties cannot be referenced

      1 | 
      2 |       import { Hash256 } from '@neo-one/smart-contract';
    > 3 |       const keys = Hash256['from'];
        |                    ^
      4 |     
"
`;

exports[`Hash256.from cannot be referenced 1`] = `
"snippetCode.ts (3,20): Builtin properties cannot be referenced

      1 | 
      2 |       import { Hash256 } from '@neo-one/smart-contract';
    > 3 |       const keys = Hash256.from;
        |                    ^
      4 |     
"
`;
